--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -35,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/icon_download"
-        android:src="@drawable/download_arrow" />
+        android:src="@drawable/info_icon"
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
