Revert document item layout to relative layout.

--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="16dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,27 +11,25 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text_doctitle"
-        android:text="Document.txt"
-        style="@style/TextAppearance.AppCompat.Small" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        style="@style/TextAppearance.AppCompat.Small"
+        android:layout_alignBottom="@+id/icon"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/icon_download"
+        android:layout_toRightOf="@+id/icon"/>
 
     <ImageButton
-        android:background="#00000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/icon_download"
         android:src="@drawable/info_icon"
-        android:layout_margin="10dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-</LinearLayout>
+</RelativeLayout>
