--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -23,7 +23,7 @@
         android:layout_toLeftOf="@+id/icon_download"
         android:layout_toRightOf="@+id/icon"/>
 
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/icon_download"
