--- a/app/src/main/res/layout/item_document4.xml
+++ b/app/src/main/res/layout/item_document4.xml
@@ -52,6 +52,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/size"
             android:text="6MB, добавлено год назад"
             android:gravity="center_vertical" />
 
