--- a/app/src/main/res/layout/item_document3.xml
+++ b/app/src/main/res/layout/item_document3.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/icon_offline"
-                android:src="@drawable/ic_offline"
+                android:src="@drawable/ic_offline_green"
                 android:layout_marginLeft="5dp"/>
             </LinearLayout>
 
