--- a/app/src/main/res/layout/item_document4.xml
+++ b/app/src/main/res/layout/item_document4.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/icon_offline"
-        android:src="@drawable/ic_offline"
+        android:src="@drawable/ic_offline_green"
         android:layout_marginLeft="31dp"
         android:layout_marginTop="37dp"
         android:layout_alignParentLeft="true"/>
