--- a/app/src/main/res/layout/item_document_downloading.xml
+++ b/app/src/main/res/layout/item_document_downloading.xml
@@ -44,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="3.3MB из 6MB"
+                android:id="@+id/size"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="3dp" />
 
@@ -54,7 +55,7 @@
                 android:gravity="center_vertical">
 
                 <ProgressBar
-                    android:layout_width="220dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="3dp"
