--- a/app/src/main/res/layout/item_document_downloading.xml
+++ b/app/src/main/res/layout/item_document_downloading.xml
@@ -8,6 +8,8 @@
     android:paddingBottom="3dp"
     android:gravity="center_vertical">
 
+    <!---TODO fix layout-->
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
