--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,50 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="elevation">6dp</dimen>
+
+    <!-- Text sizes -->
+    <dimen name="m_text_size_body">14sp</dimen>
+    <dimen name="m_text_size_caption">12sp</dimen>
+    <dimen name="m_text_size_headline">24sp</dimen>
+    <dimen name="m_text_size_progress_title">18sp</dimen>
+    <dimen name="m_text_size_subhead">16sp</dimen>
+    <dimen name="m_text_size_title">20sp</dimen>
+
+    <dimen name="m_entry_icon_padding">0dp</dimen>
+    <item type="dimen" name="m_entry_icon_size">@dimen/m_grid_5x</item>
+    <item type="dimen" name="m_entry_icon_type_size">@dimen/m_grid_2.5x</item>
+
+    <item type="dimen" name="m_entry_text_size_primary">@dimen/m_text_size_subhead</item>
+    <item type="dimen" name="m_entry_text_size_secondary">@dimen/m_text_size_body</item>
+    <item type="dimen" name="m_entry_height_two_line">@dimen/m_grid_9x</item>
+
+
+    <item type="dimen" name="doclist_entry_height">@dimen/m_entry_height_two_line</item>
+
+    <!-- 8dp grid -->
+    <dimen name="m_grid_1.25x">10.0dip</dimen>
+    <dimen name="m_grid_1.5x">12.0dip</dimen>
+    <dimen name="m_grid_1.75x">14.0dip</dimen>
+    <dimen name="m_grid_10x">80.0dip</dimen>
+    <dimen name="m_grid_11x">88.0dip</dimen>
+    <dimen name="m_grid_12x">96.0dip</dimen>
+    <dimen name="m_grid_13x">104.0dip</dimen>
+    <dimen name="m_grid_1x">8.0dip</dimen>
+    <dimen name="m_grid_2.5x">20.0dip</dimen>
+    <dimen name="m_grid_20x">160.0dip</dimen>
+    <dimen name="m_grid_27x">216.0dip</dimen>
+    <dimen name="m_grid_2x">16.0dip</dimen>
+    <dimen name="m_grid_36x">288.0dip</dimen>
+    <dimen name="m_grid_38x">304.0dip</dimen>
+    <dimen name="m_grid_3x">24.0dip</dimen>
+    <dimen name="m_grid_4.5x">36.0dip</dimen>
+    <dimen name="m_grid_40x">320.0dip</dimen>
+    <dimen name="m_grid_45x">360.0dip</dimen>
+    <dimen name="m_grid_4x">32.0dip</dimen>
+    <dimen name="m_grid_5x">40.0dip</dimen>
+    <dimen name="m_grid_6x">48.0dip</dimen>
+    <dimen name="m_grid_71x">568.0dip</dimen>
+    <dimen name="m_grid_7x">56.0dip</dimen>
+    <dimen name="m_grid_8x">64.0dip</dimen>
+    <dimen name="m_grid_9x">72.0dip</dimen>
 </resources>
