--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,4 +44,51 @@
         <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
         <item name="android:orientation">vertical</item>
     </style>
+
+    <style name="FixedSizeIcon">
+        <item name="android:layout_width">@dimen/m_grid_9x</item>
+        <item name="android:layout_height">@dimen/m_grid_9x</item>
+        <item name="android:padding">@dimen/m_grid_1x</item>
+    </style>
+
+    <style name="EntryLabel">
+        <item name="android:textAppearance">@style/TextAppearanceSecondary</item>
+        <item name="android:duplicateParentState">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">@dimen/m_grid_1x</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="TextAppearancePrimary">
+        <item name="android:textSize">@dimen/m_entry_text_size_primary</item>
+        <item name="android:textColor">@color/m_entry_text_primary</item>
+    </style>
+    <style name="TextAppearanceSecondary">
+        <item name="android:textSize">@dimen/m_entry_text_size_secondary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/m_entry_text_secondary</item>
+    </style>
+
+    <style name="ListEntryTitle">
+        <item name="android:enabled">false</item>
+        <item name="android:textSize">@dimen/m_entry_text_size_secondary</item>
+        <item name="android:textColor">@color/m_app_primary_text</item>
+        <item name="android:ellipsize">middle</item>
+        <item name="android:gravity">start</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    <style name="ListEntryTitle.DocList" parent="@style/ListEntryTitle">
+        <item name="android:textSize">@dimen/m_entry_text_size_primary</item>
+        <item name="android:textColor">@color/m_entry_text_primary</item>
+        <item name="android:layout_marginLeft">@dimen/m_grid_2x</item>
+        <item name="android:layout_marginTop">@dimen/m_grid_2x</item>
+    </style>
+    <style name="ListEntryTitle.DocList.Relative" parent="@style/ListEntryTitle.DocList">
+        <item name="android:layout_marginLeft">@dimen/m_grid_9x</item>
+    </style>
 </resources>
