--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context="io.github.nafanya.vkdocs.LoginActivity">
+    tools:context=".presentation.ui.views.LoginActivity">
 
     <Button
         android:id="@+id/continue_button"
