--- a/app/src/main/res/layout/activity_friends_list.xml
+++ b/app/src/main/res/layout/activity_friends_list.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.github.nafanya.vkdocs.MainActivity">
+    tools:context=".presentation.ui.views.MainActivity">
 
     <ListView
         android:id="@android:id/list"
