--- a/app/src/main/res/drawable/line_divider.xml
+++ b/app/src/main/res/drawable/line_divider.xml
@@ -6,6 +6,6 @@
         android:width="1px"
         android:height="1px" />
 
-    <solid android:color="@color/md_grey_400" />
+    <solid android:color="@color/m_divider" />
 
 </shape>
