--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/doc_entry_root"
+    android:id="@+id/header"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
@@ -10,7 +10,7 @@
     android:minHeight="@dimen/doclist_entry_height">
 
     <View
-        android:id="@+id/main_body"
+        android:id="@+id/body"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/doclist_entry_height"
         android:layout_alignParentTop="true"
@@ -51,9 +51,9 @@
         android:id="@+id/buttons"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/doclist_entry_height"
-        android:layout_alignBottom="@id/main_body"
-        android:layout_alignRight="@id/main_body"
-        android:layout_alignTop="@id/main_body">
+        android:layout_alignBottom="@id/body"
+        android:layout_alignRight="@id/body"
+        android:layout_alignTop="@id/body">
 
         <!-- TODO separate styles for image button -->
         <ImageButton
@@ -74,7 +74,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/main_body"
+        android:layout_alignTop="@id/body"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/buttons"
         android:orientation="vertical">
