--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,10 +18,18 @@
 
     <item type="dimen" name="m_entry_text_size_primary">@dimen/m_text_size_subhead</item>
     <item type="dimen" name="m_entry_text_size_secondary">@dimen/m_text_size_body</item>
+
+    <item type="dimen" name="m_entry_height_one_line">@dimen/m_grid_6x</item>
     <item type="dimen" name="m_entry_height_two_line">@dimen/m_grid_9x</item>
 
+    <item type="dimen" name="m_bottom_dialog_min_height">500dp</item>
 
     <item type="dimen" name="doclist_entry_height">@dimen/m_entry_height_two_line</item>
+
+    <item type="dimen" name="bottom_dialog_min_height">@dimen/m_bottom_dialog_min_height</item>
+    <item type="dimen" name="bottom_dialog_header_height">@dimen/m_entry_height_two_line</item>
+    <item type="dimen" name="bottom_dialog_item_height">@dimen/m_entry_height_one_line</item>
+
 
     <!-- 8dp grid -->
     <dimen name="m_grid_1.25x">10.0dip</dimen>
