FIltered document list One single fragment will be used to display documents.

--- a/app/src/main/res/layout/activity_documents.xml
+++ b/app/src/main/res/layout/activity_documents.xml
@@ -22,10 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_documents"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"/>
+    <include layout="@layout/content_documents"/>
 
 </android.support.design.widget.CoordinatorLayout>
