so done opening file done

--- a/app/src/main/res/layout/open_progress_dialog.xml
+++ b/app/src/main/res/layout/open_progress_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,11 +11,11 @@
         android:focusable="false"
         android:scaleType="fitXY"
         style="@style/FixedSizeIcon"
-        android:src="@drawable/file_document"/>
+        app:srcCompat="@drawable/file_document"/>
 
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
@@ -36,12 +37,13 @@
             android:indeterminate="false"
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
             android:maxHeight="10dp"
-            android:id="@+id/open_progress" />
+            android:id="@+id/down_progress" />
 
         <TextView
             android:id="@+id/size"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             style="@style/EntryLabel"
             android:text="3.5MB from 7MB (50%)"/>
 
