--- a/app/src/main/res/layout/dialog_bottom_header.xml
+++ b/app/src/main/res/layout/dialog_bottom_header.xml
@@ -32,8 +32,7 @@
                 style="@style/FixedSizeIcon"
                 android:focusable="false"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/file_document"
-                android:src="@drawable/file_document"/>
+                app:srcCompat="@drawable/file_document"/>
 
         </RelativeLayout>
 
