offline docs adapter don't work

--- a/app/src/main/res/layout/item_document_downloading.xml
+++ b/app/src/main/res/layout/item_document_downloading.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="16dp"
@@ -14,11 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ic_document_type"
-        android:src="@drawable/file_document"
         android:layout_centerHorizontal="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        app:srcCompat="@drawable/file_document"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,7 +73,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_clear"
+                    app:srcCompat="@drawable/ic_clear"
                     android:id="@+id/down_button" />
 
             </LinearLayout>
@@ -80,13 +82,13 @@
 
     </LinearLayout>
 
-    <ImageView
+<!--    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/context_menu"
         android:src="@drawable/info_icon"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true" />-->
 
 </RelativeLayout>
