--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,4 +18,24 @@
         <item>@string/tab_video</item>
         <item>@string/tab_other</item>
     </string-array>
+
+    <string-array name="doc_type_filter_items">
+        <item>@string/all</item>
+        <item>@string/text</item>
+        <item>@string/books</item>
+        <item>@string/archives</item>
+        <item>@string/gifs</item>
+        <item>@string/music</item>
+        <item>@string/video</item>
+        <item>@string/other</item>
+    </string-array>
+
+    <string name="all">All</string>
+    <string name="text">Text</string>
+    <string name="books">Books</string>
+    <string name="archives">Archives</string>
+    <string name="gifs">Gifs</string>
+    <string name="music">Music</string>
+    <string name="video">Video</string>
+    <string name="other">Other</string>
 </resources>
