--- a/app/src/main/res/menu/documents_menu.xml
+++ b/app/src/main/res/menu/documents_menu.xml
@@ -4,8 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_refresh"
-        android:orderInCategory="1"
-        android:title="Refresh"
-        app:showAsAction="always" />
+        android:id="@+id/action_sort_by"
+        android:title="@string/action_sort_by"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/action_search"
+        android:orderInCategory="100"
+        android:icon="@drawable/search"
+        app:showAsAction="ifRoom" />
+
 </menu>
