--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -30,6 +30,12 @@
         <item>@string/other</item>
     </string-array>
 
+    <string-array name="sort_by_labels">
+        <item>@string/modified</item>
+        <item>@string/size</item>
+        <item>@string/name</item>
+    </string-array>
+
     <string name="all">All</string>
     <string name="text">Text</string>
     <string name="books">Books</string>
@@ -38,4 +44,10 @@
     <string name="music">Music</string>
     <string name="video">Video</string>
     <string name="other">Other</string>
+
+    <string name="size">Size</string>
+    <string name="modified">Modified</string>
+    <string name="name">Name</string>
+
+
 </resources>
