--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,9 @@
     <dimen name="m_text_size_subhead">16sp</dimen>
     <dimen name="m_text_size_title">20sp</dimen>
 
+    <item type="dimen" name="m_recyclerview_bottom_padding">@dimen/m_grid_6x</item>
+    <dimen name="recyclerview_bottom_padding">@dimen/m_recyclerview_bottom_padding</dimen>
+
     <dimen name="m_entry_icon_padding">0dp</dimen>
     <item type="dimen" name="m_entry_icon_size">@dimen/m_grid_5x</item>
     <item type="dimen" name="m_entry_icon_type_size">@dimen/m_grid_2.5x</item>
@@ -24,6 +27,9 @@
 
     <item type="dimen" name="m_bottom_dialog_min_height">500dp</item>
 
+    <item type="dimen" name="spinner_dropdown_item_width">200dp</item>
+
+
     <item type="dimen" name="doclist_entry_height">@dimen/m_entry_height_two_line</item>
 
     <item type="dimen" name="bottom_dialog_min_height">@dimen/m_bottom_dialog_min_height</item>
@@ -32,29 +38,30 @@
 
 
     <!-- 8dp grid -->
-    <dimen name="m_grid_1.25x">10.0dip</dimen>
-    <dimen name="m_grid_1.5x">12.0dip</dimen>
-    <dimen name="m_grid_1.75x">14.0dip</dimen>
-    <dimen name="m_grid_10x">80.0dip</dimen>
-    <dimen name="m_grid_11x">88.0dip</dimen>
-    <dimen name="m_grid_12x">96.0dip</dimen>
-    <dimen name="m_grid_13x">104.0dip</dimen>
-    <dimen name="m_grid_1x">8.0dip</dimen>
-    <dimen name="m_grid_2.5x">20.0dip</dimen>
-    <dimen name="m_grid_20x">160.0dip</dimen>
-    <dimen name="m_grid_27x">216.0dip</dimen>
-    <dimen name="m_grid_2x">16.0dip</dimen>
-    <dimen name="m_grid_36x">288.0dip</dimen>
-    <dimen name="m_grid_38x">304.0dip</dimen>
-    <dimen name="m_grid_3x">24.0dip</dimen>
-    <dimen name="m_grid_4.5x">36.0dip</dimen>
-    <dimen name="m_grid_40x">320.0dip</dimen>
-    <dimen name="m_grid_45x">360.0dip</dimen>
-    <dimen name="m_grid_4x">32.0dip</dimen>
-    <dimen name="m_grid_5x">40.0dip</dimen>
-    <dimen name="m_grid_6x">48.0dip</dimen>
-    <dimen name="m_grid_71x">568.0dip</dimen>
-    <dimen name="m_grid_7x">56.0dip</dimen>
-    <dimen name="m_grid_8x">64.0dip</dimen>
-    <dimen name="m_grid_9x">72.0dip</dimen>
+    <dimen name="m_grid_1.25x">10dp</dimen>
+    <dimen name="m_grid_1.5x">12dp</dimen>
+    <dimen name="m_grid_1.75x">14dp</dimen>
+    <dimen name="m_grid_10x">80dp</dimen>
+    <dimen name="m_grid_11x">88dp</dimen>
+    <dimen name="m_grid_12x">96dp</dimen>
+    <dimen name="m_grid_13x">104dp</dimen>
+    <dimen name="m_grid_14x">112dp</dimen>
+    <dimen name="m_grid_1x">8dp</dimen>
+    <dimen name="m_grid_2.5x">20dp</dimen>
+    <dimen name="m_grid_20x">160dp</dimen>
+    <dimen name="m_grid_27x">216dp</dimen>
+    <dimen name="m_grid_2x">16dp</dimen>
+    <dimen name="m_grid_36x">288dp</dimen>
+    <dimen name="m_grid_38x">304dp</dimen>
+    <dimen name="m_grid_3x">24dp</dimen>
+    <dimen name="m_grid_4.5x">36dp</dimen>
+    <dimen name="m_grid_40x">320dp</dimen>
+    <dimen name="m_grid_45x">360dp</dimen>
+    <dimen name="m_grid_4x">32dp</dimen>
+    <dimen name="m_grid_5x">40dp</dimen>
+    <dimen name="m_grid_6x">48dp</dimen>
+    <dimen name="m_grid_71x">568dp</dimen>
+    <dimen name="m_grid_7x">56dp</dimen>
+    <dimen name="m_grid_8x">64dp</dimen>
+    <dimen name="m_grid_9x">72dp</dimen>
 </resources>
