--- a/app/src/main/res/menu/documents_menu.xml
+++ b/app/src/main/res/menu/documents_menu.xml
@@ -14,6 +14,7 @@
         android:title="@string/action_search"
         android:orderInCategory="100"
         android:icon="@drawable/search"
-        app:showAsAction="ifRoom" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 
 </menu>
