--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,7 +10,9 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"  >
 
     <Spinner android:id="@+id/toolbar_spinner"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
+        style="@style/AppTheme.Spinner.DropDown.ActionBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </android.support.v7.widget.Toolbar>
