--- a/app/src/main/res/layout/activity_documents.xml
+++ b/app/src/main/res/layout/activity_documents.xml
@@ -7,7 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/md_grey_200"
     tools:context=".presentation.ui.views.DocumentsActivity">
+
+    <!-- TODO: move background color to resources -->
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_layout"
