Changed text size from dp to sp

--- a/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
@@ -10,11 +10,10 @@
         android:layout_height="wrap_content"
         android:drawablePadding="@dimen/m_grid_1x"
         android:drawableRight="@drawable/abc_spinner_mtrl_am_alpha"
-        android:fontFamily="sans-serif"
         android:paddingLeft="@dimen/m_grid_2x"
         android:paddingRight="4dp"
         android:textColor="@color/md_dark_primary_text"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
 </LinearLayout>
