--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -47,6 +47,8 @@
             app:srcCompat="@drawable/ic_offline_green"/>
     </RelativeLayout>
 
+    <!-- TODO: make dots button clickable zone larger -->
+
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="wrap_content"
@@ -58,8 +60,8 @@
         <!-- TODO separate styles for image button -->
         <ImageButton
             android:id="@+id/extraMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="#0000"
             android:layout_marginRight="16dp"
