--- a/app/src/main/res/layout/activity_documents.xml
+++ b/app/src/main/res/layout/activity_documents.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/md_grey_200"
-    tools:context=".presentation.ui.views.DocumentsActivity">
+    tools:context=".presentation.ui.views.activities.DocumentsActivity">
 
     <!-- TODO: move background color to resources -->
 
@@ -23,11 +23,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_height="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_documents"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    </FrameLayout>
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"/>
 
 </LinearLayout>
