--- a/app/src/main/res/layout/item_document4_with_make_offline_button.xml
+++ b/app/src/main/res/layout/item_document4_with_make_offline_button.xml
@@ -52,7 +52,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/size"
+            android:id="@+id/statusLabels"
             android:text="6MB, добавлено год назад"
             android:gravity="center_vertical" />
 
