--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#5181b8</color>
     <color name="colorPrimaryDark">#38618d</color>
-    <color name="colorAccent">@color/md_white_1000</color>
-    <!--<color name="colorAccent">#FF4081</color> -->
+    <!--<color name="colorAccent">@color/md_white_1000</color>-->
+    <color name="colorAccent">#FF4081</color>
 
     <color name="m_cool_grey_70">#ff4c4c4c</color>
 
