--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:minHeight="@dimen/doclist_entry_height">
+    android:minHeight="@dimen/doclist_entry_height"
+    android:maxHeight="@dimen/doclist_entry_height">
 
     <View
         android:id="@+id/body"
@@ -49,9 +50,8 @@
     <!-- TODO: make dots button clickable zone larger -->
 
     <LinearLayout
-        style=""
         android:id="@+id/buttons"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/doclist_button_width"
         android:layout_height="@dimen/doclist_entry_height"
         android:layout_alignBottom="@id/body"
         android:layout_alignRight="@id/body"
@@ -84,8 +84,10 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/body"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/buttons"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_toRightOf="@+id/doc_icon_wrapper"
+        android:layout_toLeftOf="@+id/buttons"
+        android:layout_toStartOf="@+id/buttons">
 
         <TextView
             android:id="@+id/text_document_title"
@@ -97,7 +99,6 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/m_grid_2x"
             android:layout_marginLeft="@dimen/m_grid_9x"
             android:orientation="horizontal">
 
@@ -117,15 +118,19 @@
                 android:layout_width="0px"
                 android:layout_weight="1.0"/>
 
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="0.0px"
-                android:layout_weight="1.0"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:max="100"
-                android:indeterminate="false"
-                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_marginLeft="@dimen/m_grid_9x"
+            android:layout_marginRight="@dimen/m_grid_2x"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:max="100"
+            android:progress="50"
+            android:indeterminate="false"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
+
     </LinearLayout>
 </RelativeLayout>
