--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -45,6 +45,17 @@
             android:scaleType="center"
             android:visible="false"
             app:srcCompat="@drawable/ic_offline_green"/>
+
+        <ImageView
+            android:id="@+id/ic_document_offline_progress"
+            android:layout_width="@dimen/m_entry_icon_type_size"
+            android:layout_height="@dimen/m_entry_icon_type_size"
+            android:layout_alignBottom="@id/ic_document_type"
+            android:layout_alignRight="@id/ic_document_type"
+            android:focusable="false"
+            android:scaleType="center"
+            android:visible="false"
+            app:srcCompat="@drawable/ic_offline_gray"/>
     </RelativeLayout>
 
     <!-- TODO: make dots button clickable zone larger -->
