some bug in offline adapter

--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -114,7 +114,7 @@
             android:orientation="horizontal">
 
             <!-- Modified: / Size: / etc.
-            TODO: extract tring resources-->
+            TODO: extract string resources-->
             <TextView
                 android:id="@+id/sortLabel"
                 android:text="Size: "
