--- a/app/src/main/res/menu/documents_menu.xml
+++ b/app/src/main/res/menu/documents_menu.xml
@@ -7,12 +7,13 @@
         android:id="@+id/action_sort_by"
         android:title="@string/action_sort_by"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:icon="@drawable/sort"
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/action_search"
         android:title="@string/action_search"
-        android:orderInCategory="100"
+        android:orderInCategory="99"
         android:icon="@drawable/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
