--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#5181b8</color>
+    <color name="colorPlaceholder">#99b2d1</color>
     <color name="colorPrimaryDark">#38618d</color>
-    <!--<color name="colorAccent">@color/md_white_1000</color>-->
+    <!--<color name="colorAccent">@color/md_white_1000</color>FF86A9D1-->
     <color name="colorAccent">#FF4081</color>
 
     <color name="m_cool_grey_70">#ff4c4c4c</color>
