--- a/app/src/main/res/drawable/skip_next.xml
+++ b/app/src/main/res/drawable/skip_next.xml
@@ -1,8 +1,8 @@
-<!-- drawable/play.xml -->
+<!-- drawable/skip-next.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="@dimen/audio_player_button"
     android:width="@dimen/audio_player_button"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="@color/colorPlayerButton" android:pathData="M8,5.14V19.14L19,12.14L8,5.14Z" />
+    <path android:fillColor="@color/colorPlayerButton" android:pathData="M16,18.14H18V6.14H16M6,18.14L14.5,12.14L6,6.14V18.14Z" />
 </vector>
