--- a/app/src/main/res/drawable/skip_previous.xml
+++ b/app/src/main/res/drawable/skip_previous.xml
@@ -1,8 +1,8 @@
-<!-- drawable/play.xml -->
+<!-- drawable/skip-previous.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="@dimen/audio_player_button"
     android:width="@dimen/audio_player_button"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="@color/colorPlayerButton" android:pathData="M8,5.14V19.14L19,12.14L8,5.14Z" />
+    <path android:fillColor="@color/colorPlayerButton" android:pathData="M6,18.14V6.14H8V18.14H6M9.5,12.14L18,6.14V18.14L9.5,12.14Z" />
 </vector>
