--- a/app/src/main/res/layout/audio_player_fragment.xml
+++ b/app/src/main/res/layout/audio_player_fragment.xml
@@ -8,7 +8,43 @@
     android:theme="@style/AppTheme.MusicPlayer">
 
     <ImageView
-        app:srcCompat="@drawable/library_music"
+        app:srcCompat="@drawable/music_box_outline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                app:srcCompat="@drawable/skip_previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                app:srcCompat="@drawable/play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                app:srcCompat="@drawable/skip_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+            <SeekBar
+                android:id="@+id/seek_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"/>
+
+    </LinearLayout>
 </LinearLayout>
