--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <resources>
+
+    <!---override material draw item size, poh na guidelines-->
+
+    <dimen name="material_drawer_item_primary_text">16sp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
 
     <dimen name="audio_player_button">60dp</dimen>
