Fixed bottom menu switch style

--- a/app/src/main/res/layout/dialog_bottom_body.xml
+++ b/app/src/main/res/layout/dialog_bottom_body.xml
@@ -109,7 +109,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:id="@+id/switch1"
-            style="?switchStyle"/>
+            style="@style/Base.Widget.AppCompat.CompoundButton.Switch"/>
     </RelativeLayout>
 
     <RelativeLayout
